--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -454,7 +454,7 @@ main .blog-single header .inner {
 }
 
 main .blog-single header .inner .time {
-    color: #fff;
+    color: #0e0e11;
     display: flex;
     align-items: center
 }
