--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -305,9 +305,9 @@ header .menu .btn:hover::before {
 
 header .logo a {
     display: flex;
-    color: #fff;
+    color: #0e0e11;
     padding: 15px 30px;
-    border: 3px solid #fff;
+    border: 3px solid #0e0e11;
     align-items: center;
     justify-content: center;
     font-size: 40px;
