--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -982,7 +982,7 @@ main .article-content {
     line-height: 1.7;
     margin-bottom: 60px;
     font-size: 16px;
-    color: rgba(255, 255, 255, .8)
+    color: rgba(22, 22, 22, 0.8)
 }
 
 main .article-content .article-author {
@@ -994,7 +994,7 @@ main .article-content .article-author {
 
 main .article-content .article-author .date {
     opacity: .6;
-    color: #fff
+    color: #0e0e11
 }
 
 main .article-content .article-author .category {
@@ -1032,7 +1032,7 @@ main .article-content h4,
 main .article-content h5,
 main .article-content h6 {
     line-height: 1.3;
-    color: #fff;
+    color: #0e0e11;
     font-weight: bold;
     margin-bottom: 15px
 }
@@ -1079,7 +1079,7 @@ main .article-content p {
 }
 
 main .article-content p a {
-    color: #fff;
+    color: #0e0e11;
     border-bottom: 3px solid #f67521
 }
 
@@ -1119,7 +1119,7 @@ main .contact-box ul li {
     display: flex;
     align-items: center;
     font-size: 20px;
-    color: #fff;
+    color: #0e0e11;
     line-height: 1.4
 }
 
@@ -1440,8 +1440,8 @@ footer .container .social ul li a i {
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #fff;
-    border-right: 3px solid #fff;
+    color: #0e0e11;
+    border-right: 3px solid #0e0e11;
     margin-right: 20px
 }
 
@@ -1470,7 +1470,7 @@ footer .container .social ul li a i.icon-github {
 }
 
 footer .container .social ul li a:hover {
-    color: #fff
+    color: #0e0e11
 }
 
 footer .container .social ul li a:hover::before {
@@ -1509,7 +1509,7 @@ footer .container .phone {
     align-items: center;
     justify-content: center;
     margin: 25px auto;
-    color: #fff;
+    color: #0e0e11;
     font-size: 30px
 }
 
