--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1470,7 +1470,7 @@ footer .container .social ul li a i.icon-github {
 }
 
 footer .container .social ul li a:hover {
-    color: #fff
+    color: #0e0e11
 }
 
 footer .container .social ul li a:hover::before {
