--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1522,7 +1522,7 @@ footer .container .phone i {
 footer .container address {
     text-align: center;
     font-size: 12px;
-    color: rgba(255, 255, 255, .5);
+    color: rgba(24, 24, 24, 0.5);
     line-height: 1.4;
     padding-bottom: 50px
 }
