--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1411,7 +1411,7 @@ footer .container .social ul li a {
     border: 3px solid #fff;
     align-items: center;
     font-size: 16px;
-    color: #fff;
+    color: #0e0e11;
     letter-spacing: 1px;
     position: relative;
     z-index: 1;
