--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1912,7 +1912,8 @@ body.light header .menu ul li a {
 
 body.light header .menu .btn {
     background: #fff;
-    color: #0e0e11
+    color: #0e0e11;
+    border-color: #0e0e11;
 }
 
 body.light .button {
