--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2398,7 +2398,7 @@ body.light footer .container .social ul li a i {
     overflow-x: auto;
     padding: .5em;
     color: #abb2bf;
-    background: rgba(255, 255, 255, .07)
+    background: rgba(0, 0, 0, 0.07)
 }
 
 .hljs-comment,
