--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -267,6 +267,7 @@ header .menu .btn {
     font-size: 18px;
     font-weight: 500;
     color: #0e0e11;
+    border: 3px solid #0e0e11;
     background: #fff;
     position: relative;
     transition: 300ms color;
