--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2399,7 +2399,7 @@ body.light footer .container .social ul li a i {
     overflow-x: auto;
     padding: .5em;
     color: #fff;
-    background: rgba(255, 255, 255, .8);
+    background: rgb(14, 14, 17, 0.5);
 }
 
 .hljs-comment,
