--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -149,7 +149,7 @@
 }
 
 body {
-    background: #fff;
+    background: #f5f6f7;
     -webkit-font-smoothing: antialiased;
     font-family: Merriweather, sans-serif
 }
