--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2471,5 +2471,23 @@ body.light footer .container .social ul li a i {
     text-decoration: underline
 }
 
-
+.right-image-decor {
+    background-image: url(https://www.yigidosoft.com/assets/images/right-bg-decor.png);
+    background-repeat: no-repeat;
+    background-position: right center;
+    position: absolute;
+    width: 100%;
+    display: inline-block;
+    height: 110%;
+    margin-top: -200px;
+}
+.left-image-decor {
+    background-image: url(https://www.yigidosoft.com/assets/images/left-bg-decor.png);
+    background-repeat: no-repeat;
+    position: absolute;
+    width: 100%;
+    display: inline-block;
+    height: 110%;
+    margin-top: -200px;
+}
 /*# sourceMappingURL=style.css.map */
