--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2480,7 +2480,7 @@ body.light footer .container .social ul li a i {
     display: inline-block;
     height: 110%;
     margin-top: -200px;
-    padding-top: 50%;
+    padding-top: 1400px;
 }
 .left-image-decor {
     background-image: url(https://www.yigidosoft.com/assets/images/left-bg-decor.png);
