--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -337,7 +337,7 @@ header .toggle-btn {
     display: none;
     align-items: center;
     justify-content: center;
-    color: #fff;
+    color: #0e0e11;
     font-size: 24px;
     position: relative;
     z-index: 9999999
@@ -347,7 +347,7 @@ h3.title {
     display: inline-flex;
     font-size: 30px;
     letter-spacing: 1px;
-    color: #fff;
+    color: #0e0e11;
     position: relative;
     margin-bottom: 20px
 }
