--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -347,7 +347,7 @@ h3.title {
     display: inline-flex;
     font-size: 30px;
     letter-spacing: 1px;
-    color: #0e0e11;
+    color: #fff;
     position: relative;
     margin-bottom: 20px
 }
