--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2090,7 +2090,7 @@ body.light footer .container .social ul li a i {
         left: 0;
         width: 100%;
         height: 100%;
-        background: #0e0e11;
+        background: #f5f6f7;
         z-index: 999;
         flex-direction: column;
         justify-content: center;
