--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2475,8 +2475,9 @@ body.light footer .container .social ul li a i {
     background-image: url(https://www.yigidosoft.com/assets/images/right-bg-decor.png);
     background-repeat: no-repeat;
     background-position: right center;
-    position: relative;
+    position: absolute;
     width: 100%;
+    z-index: -2;
     display: inline-block;
     height: 110%;
     margin-top: -1000px;
@@ -2484,8 +2485,9 @@ body.light footer .container .social ul li a i {
 .left-image-decor {
     background-image: url(https://www.yigidosoft.com/assets/images/left-bg-decor.png);
     background-repeat: no-repeat;
-    position: relative;
+    position: absolute;
     width: 100%;
+    z-index: -2;
     display: inline-block;
     height: 110%;
     margin-top: -200px;
