--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -840,6 +840,68 @@ testimonials
   position: relative;
 }
 
+#testimonials .item .testimonial-browser{
+  width: 100%;
+  min-width: 50%;
+  border: 1px solid #111;
+  border-radius: 5px;
+}
+
+#testimonials .item .testimonial-browser .title{
+  height: 30px;
+  background: linear-gradient(
+    145deg, rgb(244, 160, 63) 0%, rgb(243, 185, 26) 100%);
+  display: flex;
+  align-items: center;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+#testimonials .item .testimonial-browser .title span{
+  width: 8px;
+  height: 8px;
+  background: #111;
+  border-radius: 50%;
+  position: relative;
+  margin-left: 30px
+}
+
+#testimonials .item .testimonial-browser .title span::before{
+  content: "";
+  width: inherit;
+  height: inherit;
+  border-radius: inherit;
+  background: #e9203a;
+  position: absolute;
+  top: 0;
+  left: -15px
+}
+
+#testimonials .item .testimonial-browser .title span::after{
+  content: "";
+  width: inherit;
+  height: inherit;
+  border-radius: inherit;
+  background: #4eac2f;
+  position: absolute;
+  top: 0;
+  right: -15px
+}
+
+#testimonials .item .testimonial-browser .content{
+  height: 300px;
+  background-size: cover;
+  transition: 5s all;
+  border: 5px solid linear-gradient(
+    145deg, rgb(244, 160, 63) 0%, rgb(243, 185, 26) 100%);
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+#testimonials .item .testimonial-browser .content.content:hover {
+  background-position: bottom
+}
+
 #testimonials .item .testimonial-content {
   background: rgb(244,129,63);
   background: linear-gradient(145deg, rgb(244, 160, 63) 0%, rgb(243, 185, 26) 100%);
