--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1912,7 +1912,7 @@ body.light header .menu ul li a {
 }
 
 body.light header .menu .btn {
-    background: #fff;
+    background: #ecedf1;
     color: #0e0e11;
     border: 1px solid #0e0e11;
 }
