custom cursor added

--- a/production/resources/css/custom.css
+++ b/production/resources/css/custom.css
@@ -73,6 +73,7 @@ body {
     color: #1d1d1d;
     margin: 0;
     padding: 0;
+    cursor: none;
 }
 
 ul, li {
@@ -7141,4 +7142,26 @@ h1, h2, h3, h4 {
     .item-buttons .item-buttons-purchase, .item-buttons .item-buttons-next {
         text-align: center;
     }
+}
+/*Custom Cursor*/
+
+.cursor-dot, .cursor-dot-outline {
+    pointer-events: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    border-radius: 50%;
+    opacity: 0;
+    transform: translate(-50%, -50%);
+    transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+}
+.cursor-dot {
+    width: 8px;
+    height: 8px;
+    background-color: #f2b125;
+}
+.cursor-dot-outline {
+    width: 40px;
+    height: 40px;
+    background-color: rgba(242, 177, 32, 0.5);
 }
