--- a/production/resources/css/custom.css
+++ b/production/resources/css/custom.css
@@ -7158,10 +7158,10 @@ h1, h2, h3, h4 {
 .cursor-dot {
     width: 8px;
     height: 8px;
-    background-color: #f2b125;
+    background-color: #fff;
 }
 .cursor-dot-outline {
     width: 40px;
     height: 40px;
-    background-color: rgba(242, 177, 32, 0.5);
+    background-color: rgba(242, 177, 32, 0.7);
 }
