--- a/production/resources/css/custom.css
+++ b/production/resources/css/custom.css
@@ -7158,7 +7158,7 @@ h1, h2, h3, h4 {
 .cursor-dot {
     width: 8px;
     height: 8px;
-    background-color: #fff;
+    background-color: #555;
 }
 .cursor-dot-outline {
     width: 40px;
