--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -7167,3 +7167,42 @@ h1, h2, h3, h4 {
     height: 30px;
     border: 2px solid #555;
 }
+
+/* scroll icon*/
+
+
+.scroll-downs {
+    position: absolute;
+    top: 160%;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    
+    width :34px;
+    height: 55px;
+  }
+  .mousey {
+    width: 1px;
+    padding: 10px 15px;
+    height: 30px;
+    border: 2px solid rgba(27, 27, 27, 0.75);
+    border-radius: 25px;
+    opacity: 0.75;
+    box-sizing: content-box;
+  }
+  .scroller {
+    width: 3px;
+    height: 10px;
+    border-radius: 25%;
+    background-color: rgba(27, 27, 27, 0.75);
+    animation-name: scroll;
+    animation-duration: 2.2s;
+    animation-timing-function: cubic-bezier(.15,.41,.69,.94);
+    animation-iteration-count: infinite;
+  }
+  @keyframes scroll {
+    0% { opacity: 0; }
+    10% { transform: translateY(0); opacity: 1; }
+    100% { transform: translateY(15px); opacity: 0;}
+  }
