--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -7156,6 +7156,7 @@ h1, h2, h3, h4 {
     opacity: 0;
     transform: translate(-50%, -50%);
     transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+    z-index: 2;
 }
 .cursor-dot {
     width: 8px;
