--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -109,15 +109,15 @@ p {
     font-size: 1rem;
 }
 
-@media (min-width: 601px) {
+@media only screen and (max-device-width: 480px) {
     p {
-        font-size: 1rem;
+        font-size: 1.5rem;
     }
 }
 
 @media (min-width: 1400px) {
     p {
-        font-size: 1rem;
+        font-size: 1.2rem;
     }
 }
 
@@ -2864,7 +2864,6 @@ textarea {
     border-radius: 5px;
     left: 1.5em;
   }
-  
   .browser-mockup:before {
     display: block;
     position: absolute;
@@ -2898,6 +2897,14 @@ textarea {
     background-position: bottom;
   }
 
+  @media only screen and (max-device-width: 768px) {
+    .browser-mockup{
+        height: 750px;
+    }
+    .browser-mockup .content{
+        height: 750px;
+    }
+}
 @media (min-width: 768px) {
     .carousel-swiper-beta .slider-container .item-wrapper {
         padding: 0 0;
@@ -4613,6 +4620,11 @@ textarea {
     font-weight: bold;
     text-decoration: none;
 }
+@media only screen and (max-device-width: 480px) {
+    .page-footer .footer-left a{
+        font-size: 36px;
+    }
+}
 
 .page-footer .footer-left a:hover{
     color:#f2b125;
@@ -4670,8 +4682,14 @@ textarea {
     color: #ffffff;
 }
 
-.page-footer .social .icon {
+.page-footer .social a{
     font-size: 16px;
+}
+@media only screen and (max-device-width: 480px) {
+    .page-footer .social a  {
+        margin-right: 58px;
+        font-size: 36px;
+    }
 }
 
 .page-footer.scrolled .footer-left, .page-footer.scrolled .footer-right {
@@ -6960,7 +6978,7 @@ textarea {
 
 @media (min-width: 768px) {
     .display-4 {
-        font-size: 3rem;
+        font-size: 4rem;
     }
 }
 
