--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -1,32 +1,4 @@
-/*-----------------------------------------------------------------
-[Legal Notice]
 
-Copyright (c) LifeInSYS
-Website Template by LifeInSYS
-#
--------------------------------------------------------------------*/
-
-/*------------------------------------------------------------------
-[Table of contents]
-0. Base Style
-0.1 Placeholder
-1. Components
-1.1 form, button, input
-1.2 Layout
-1.3 Grid / list / slider / gallery
-1.4 Menu / menu-header / nav
-1.5 . Additional UI
-2. Page Header / .page-header
-3. Page Footer / .page-footer
-4. Pages / .page-main
-5. Sections / .section
-5.1 Default layout / .section
-5.2 Home screen / .section-home
-6. Helper classes / Responsiveness
-6.1 Helper classes
-6.2 Responsiveness
-7. Additional Style for Sections
-*/
 
 .text-black {
     color: #1d1d1d !important;
@@ -69,7 +41,7 @@ video {
     cursor: none;
 }
 body {
-    font-family: "Open Sans", "Opensans", "Roboto", -apple-system, system-ui, BlinkMacSystemFont, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 1rem;
     background-color: #ffffff;
     color: #1d1d1d;
@@ -98,7 +70,7 @@ a {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: "Open Sans", "Opensans", "Roboto", -apple-system, system-ui, BlinkMacSystemFont, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 h3, h4 {
