--- a/test/resources/css/style.css
+++ b/test/resources/css/style.css
@@ -1005,3 +1005,76 @@ footer .bottom-details .bottom_text {
     background-color: var(--primary-color);
 }
 
+.contact-section {
+    position: relative;
+    width: 100%;
+    height: 700px;
+    padding: 150px;
+}
+
+.contact-section::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url("../images/contact-bg.webp");
+    background-size: 100% 900px;
+    object-fit: cover;
+    object-position: 50% 50%;
+    background-repeat: no-repeat;
+    filter: invert(11%) sepia(100%) saturate(7076%) hue-rotate(266deg) brightness(110%) contrast(123%);
+    background-attachment: fixed;
+}
+
+.contact-title {
+    height: 380px;
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+}
+
+.contact-title h2 {
+    color: var(--white);
+    font-family: var(--font_1);
+    font-weight: bold;
+    font-size: var(--font-size-44);
+    margin: 30px 0;
+}
+
+.contact-title p {
+    max-width: 859px;
+    text-align: left;
+    font-size: var(--font-size-28);
+    color: var(--white);
+    font-family: var(--font_1);
+    font-weight: normal;
+    line-height: 1.6em;
+    margin: 30px 0;
+    box-shadow: var(--shadow, 0 1px 4px rgba(0, 0, 0, .6));
+}
+
+.send-mail {
+    width: 215px;
+    height: 65px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: var(--white);
+    border-radius: var(--radius, 5px);
+    box-shadow: var(--shadow, 0 1px 4px rgba(0, 0, 0, .6));
+    padding: 20px;    
+    color: var(--black);
+    font-family: var(--font_0);
+    font-size: 18px;
+    font-weight: normal;
+    text-decoration: none;
+    cursor: pointer;
+    vertical-align: baseline;
+}
+.send-mail:hover{
+    background-color: transparent;
+    color: var(--white);
+    border: 3px solid var(--border-color);
+}
