--- a/test/resources/css/style.css
+++ b/test/resources/css/style.css
@@ -504,6 +504,7 @@ html {
     font-family: var(--font_2);
     font-weight: bold;
     font-size: var(--font-size-44);
+    margin: 30px 0;
 }
 
 .container-title p {
