--- a/test/resources/css/style.css
+++ b/test/resources/css/style.css
@@ -967,12 +967,16 @@ footer .bottom-details .bottom_text {
 .contact-section {
     position: relative;
     width: 100%;
-    height: 700px;
-    padding: 150px;
+    height: 500px;
+    padding: 50px 50px 50px 150px;    
+    z-index: -1;
 }
 @media only screen and (max-width: 768px) {
     .contact-section {
         padding: 10px;
+    }
+    .fun{        
+        margin-left: 0;
     }
 }
 .contact-section::before {
@@ -1040,4 +1044,17 @@ footer .bottom-details .bottom_text {
     background-color: transparent;
     color: var(--white);
     border: 3px solid var(--border-color);
+}
+.fun{
+    margin-bottom: -40px;
+    margin-left: 100px;
+}
+.fun img{
+    width: 320px;
+}
+
+@media only screen and (max-width: 768px) {
+    .fun{        
+        margin-left: 0;
+    }
 }
