--- a/test/resources/css/style.css
+++ b/test/resources/css/style.css
@@ -372,9 +372,7 @@ html {
     font-size: var(--font-size-20);
     font-weight: bold;
     text-decoration: none;
-    cursor: pointer;
     vertical-align: baseline;
-    padding: 0 10px;
 }
 
 .product .product-title p {
@@ -385,7 +383,6 @@ html {
     text-decoration: none;
     cursor: pointer;
     vertical-align: baseline;
-    padding: 0 10px;
 }
 
 .home-info {
@@ -536,39 +533,7 @@ html {
 #sponsors{
     margin-top: 100px;
 }
-@media screen and (max-width: 650px) {
-    .left-app-panel {
-        width: 280px;
-        left: 5%;
-    }
 
-    .left-app-panel .bg-phone {
-        position: relative;
-        margin: auto;
-        right: auto;
-    }
-
-    .left-app-panel .bg-product {
-        margin: auto;
-        left: 0px;
-    }
-
-    .wallsdrobe-app-background .right-app-panel {
-        width: 280px;
-        left: 5%;
-    }
-
-    .right-app-panel .bg-phone {
-        position: relative;
-        margin: auto;
-        right: auto;
-    }
-
-    .right-app-panel .bg-product {
-        margin: auto;
-        left: 0px;
-    }
-}
 
 .right-app-panel {
     width: 650px;
@@ -583,14 +548,6 @@ html {
     align-items: center;
     display: grid;
 }
-
-@media screen and (max-width: 1200px) {
-    .right-app-panel {
-        left: 80px;
-        right: auto;
-    }
-}
-
 .bg-product {
     max-width: 320px;
     height: auto;
@@ -678,6 +635,46 @@ html {
     position: static;
     width: 186px;
     height: 372px;
+}
+
+@media screen and (max-width: 720px) {
+    .wallsdrobe-app-background, .sw-app-background, .wordaily-app-background {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .right-app-panel {
+        width: 280px;
+        margin: auto;
+        left: auto;
+        right: auto;
+    }
+    .left-app-panel {
+        width: 280px;
+        margin: auto;
+        left: auto;
+    }
+    .left-app-panel .bg-phone {
+        position: relative;
+        margin: auto;
+        right: auto;
+    }
+
+    .left-app-panel .bg-product {
+        margin: auto;
+        left: 0px;
+    }
+
+    .right-app-panel .bg-phone {
+        position: relative;
+        margin: auto;
+        right: auto;
+    }
+
+    .right-app-panel .bg-product {
+        margin: auto;
+        left: 0px;
+    }
 }
 
 .sponsors {
@@ -968,15 +965,12 @@ footer .bottom-details .bottom_text {
     position: relative;
     width: 100%;
     height: 500px;
-    padding: 50px 50px 50px 170px;    
-    z-index: -1;
+    padding: 50px 50px 50px 170px; 
+    margin-bottom: 100px;
 }
 @media only screen and (max-width: 768px) {
     .contact-section {
         padding: 10px;
-    }
-    .fun{        
-        margin-left: 0;
     }
 }
 .contact-section::before {
@@ -1044,17 +1038,4 @@ footer .bottom-details .bottom_text {
     background-color: transparent;
     color: var(--white);
     border: 3px solid var(--border-color);
-}
-.fun{
-    margin-bottom: -40px;
-    margin-left: 120px;
-}
-.fun img{
-    width: 320px;
-}
-
-@media only screen and (max-width: 768px) {
-    .fun{        
-        margin-left: 0;
-    }
 }
